src/test/deca/syntax/valid/divise_par_not.deca
// Description:
//    on divise par !unary_exp puis par -3
//
// Resultats:
//   ok


{ int x;
  x/!true;
  x/-3;}
