src/test/deca/syntax/invalid/divise_par_modulo.deca
// Description:
//    on divise par !unary_exp puis par -3
//
// Resultats:
//    Erreur de syntaxe
//    ligne 10 : " no viable alternative at input '%'" 


{ int x;
  x/%3;}
